--- a/packages/ogm/package.json
+++ b/packages/ogm/package.json
@@ -7,6 +7,7 @@
         "graphql",
         "ogm"
     ],
+    "type": "module",
     "license": "Apache-2.0",
     "bugs": {
         "url": "https://github.com/neo4j/graphql/issues"
